--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,57 @@
 .App {
   text-align: center;
   display: flex;
-  width: 1100px;
+  width: 800px;
+  margin: auto;
   flex-wrap: wrap;
 }
-
 .card {
-  width: 180px;
-  height: 180px;
+  width: 130px;
+  height: 130px;
+  background: linear-gradient(to right, #3f0041, #9f3f2f);
+  border: 2px solid white;
+  box-sizing: border-box;
 }
-
+.card:hover {
+  border: solid 1px white;
+  cursor: pointer;
+}
 img {
   width: 100%;
   height: 100%;
+}
+.notShow {
+  display: none;
+}
+.show {
+  display: block;
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px;
+}
+button {
+  width: 770px;
+  height: 50px;
+  text-align: center;
+  background-color: rgb(243, 191, 21);
+  font-size: 1.5rem;
+  border-radius: 10px;
+  border: 2px rgb(192, 191, 191) solid;
+  font-weight: 300;
+  cursor: pointer;
 }
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,11 +62,9 @@ img {
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
   color: #61dafb;
 }
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
